--- a/homework-17/package.json
+++ b/homework-17/package.json
@@ -4,8 +4,16 @@
   "description": "DOM exercises",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "date2md": "jsdoc2md 0-datetime/*.js > 0-datetime/README.md"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^7.5.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "jsdoc": "^3.6.4",
+    "jsdoc-to-markdown": "^6.0.1"
+  }
 }
