--- a/homework-17/package.json
+++ b/homework-17/package.json
@@ -14,6 +14,8 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "jsdoc": "^3.6.4",
-    "jsdoc-to-markdown": "^6.0.1"
-  }
+    "jsdoc-to-markdown": "^6.0.1",
+    "prettier": "^2.0.5"
+  },
+  "dependencies": {}
 }
