added homework-18 first exercise

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #excluding node_modules
 /homework-16/node_modules
 /homework-17/node_modules
+/homework-18/node_modules
 
 # excluding jsdocs result
 /homework-16/docs
