--- a/homework-18/package.json
+++ b/homework-18/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "cssfixer": "npx postcss 3-book_re/style/*.css --use autoprefixer -d build/"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -13,5 +15,9 @@
     "eslint-plugin-import": "^2.22.0",
     "jsdoc": "^3.6.5",
     "jsdoc-to-markdown": "^6.0.1"
+  },
+  "dependencies": {
+    "autoprefixer": "^9.8.6",
+    "postcss-cli": "^7.1.1"
   }
 }
