--- a/homework-18/.eslintrc.json
+++ b/homework-18/.eslintrc.json
@@ -11,6 +11,14 @@
   "rules": {
     "linebreak-style": 0,
     "import/prefer-default-export": "off",
-    "import/no-default-export": "error"
+    "import/no-default-export": "error",
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never"
+      }
+    ]
   }
 }
